# gridpulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  EXECUTION_BRIEF.md  LICENSE  PRD.md  README.md  STATUS.md  TECHNICAL_SPEC.md  THIRD_PARTY_NOTICES.md  api.py  app.py  config.py  hash_utils.py  health.py  landing.py  observability.py  populate_redis.py  precompute.py  pyproject.toml  ratelimit.py  reconcile.py  requirements.txt
.claude/: launch.json
.github/: CODEOWNERS  pull_request_template.md
assets/: accessibility.js  ba_polygons.geojson  custom.css  multipoint_coordinates.json
components/: __init__.py  _callbacks_alerts.py  _callbacks_backtest.py  _callbacks_forecast.py  _callbacks_generation.py  _callbacks_models.py  _callbacks_overview.py  _callbacks_shared.py  _callbacks_us_grid.py  _callbacks_weather.py  accessibility.py  callbacks.py  cards.py  error_handling.py  icons.py  insights.py  layout.py  tab_alerts.py  tab_backtest.py  tab_demand_outlook.py  tab_forecast.py  tab_generation.py  tab_models.py  tab_overview.py  tab_simulator.py  tab_us_grid.py  tab_weather.py
data/: __init__.py  ai_briefing.py  audit.py  cache.py  demo_data.py  eia_client.py  explainability.py  feature_engineering.py  forecast_history.py  gcs_store.py  news_client.py  noaa_client.py  preprocessing.py  quality.py  redis_client.py  session_diff.py  user_prefs.py  vintage.py  weather_aggregate.py  weather_client.py  weather_normals.py
docs/: ANCHOR_CONDITIONING_STUDY.md  BACKTEST_RESULTS.md  CANONICAL_FACTS.md  CHART_TABLE_FORECAST_REVIEW.md  CRAFT_BAR_UX_PLAN.md  (+18 more)
(+237 files in other folders)
